--- a/app/src/main/res/layout/item_stage.xml
+++ b/app/src/main/res/layout/item_stage.xml
@@ -23,9 +23,8 @@
         android:id="@+id/titleTextView"
         style="@style/ValueTextView"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/medium_space"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/favoriteImageView"
         app:layout_constraintStart_toEndOf="@+id/dataTextView"
         app:layout_constraintTop_toTopOf="parent"
