--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -22,9 +22,9 @@
             android:id="@+id/usersNumberTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:minWidth="42dp"
             android:background="@color/green"
             android:gravity="center"
+            android:minWidth="42dp"
             android:padding="@dimen/low_space"
             android:textColor="@color/white"
             android:textSize="26sp"
@@ -35,19 +35,19 @@
         android:id="@+id/userNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="@dimen/low_space"
+        android:layout_margin="@dimen/low_space"
         android:textColor="@color/onBackground"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/groupTextView"
         app:layout_constraintStart_toEndOf="@id/numberCardView"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Прохоров Алексей" />
+        tools:text="Прохоров Алексей " />
 
     <TextView
         android:id="@+id/userDetailsTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="@dimen/low_space"
+        android:layout_margin="@dimen/low_space"
         android:textColor="@color/onBackground"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/groupTextView"
@@ -59,11 +59,12 @@
         android:id="@+id/groupTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/low_space"
         android:maxWidth="@dimen/big_space"
-        android:padding="@dimen/low_space"
         android:textColor="@color/onBackground"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@id/resultTimeTextView"
+        app:layout_constraintEnd_toEndOf="@+id/firstAttemptTimeTextView"
+        app:layout_constraintEnd_toStartOf="@+id/firstAttemptTimeTextView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="D3-D2" />
 
@@ -71,41 +72,67 @@
         android:id="@+id/firstAttemptTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/low_space"
         android:gravity="end"
-        android:minWidth="90dp"
         android:padding="@dimen/low_space"
         android:textColor="@color/onBackground"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/firstAttemptFineTextView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="02:02.33" />
+
+    <TextView
+        android:id="@+id/firstAttemptFineTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:paddingTop="@dimen/low_space"
+        android:paddingBottom="@dimen/low_space"
+        android:paddingEnd="@dimen/low_space"
+        android:textColor="@color/yellow"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="+1"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/secondAttemptTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/low_space"
         android:gravity="end"
         android:padding="@dimen/low_space"
-        android:minWidth="90dp"
         android:textColor="@color/onBackground"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/secondAttemptFineTextView"
         app:layout_constraintTop_toBottomOf="@+id/firstAttemptTimeTextView"
         tools:text="02:02.33" />
+
+    <TextView
+        android:id="@+id/secondAttemptFineTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:paddingTop="@dimen/low_space"
+        android:paddingEnd="@dimen/low_space"
+        android:paddingBottom="@dimen/low_space"
+        android:textColor="@color/yellow"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstAttemptTimeTextView"
+        tools:text="+1" />
 
     <TextView
         android:id="@+id/resultTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/low_space"
         android:gravity="end"
         android:padding="@dimen/low_space"
-
-        android:minWidth="90dp"
         android:paddingBottom="@dimen/low_space"
         android:textColor="@color/green"
         android:textSize="18sp"
