--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,10 @@
     <color name="black">#FF000000</color>
     <color name="green">#00e600</color>
     <color name="red">#e60000</color>
+    <color name="orange">#FF5722</color>
     <color name="yellow">#FFFF00</color>
     <color name="white">#ffffff</color>
-    <color name="gray">#494949</color>
+    <color name="gray">#606060</color>
 
     <color name="primary">#293251</color>
     <color name="background">#384266</color>
